# cpu_features

./: .bazelrc  .clang-format  .dockerignore  .gitignore  .grenrc.yml  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  OWNERS  README.md  WORKSPACE  appveyor.yml  build.zig  build.zig.zon
.github/workflows/: Dockerfile  aarch64_linux.yml  aarch64_linux_bazel.yml  aarch64_linux_cmake.yml  aarch64_linux_zig.yml  aarch64_macos_bazel.yml  aarch64_macos_cmake.yml  amd64_bazel_linux.yml  amd64_freebsd.yml  amd64_freebsd_cmake.yml  amd64_linux.yml  amd64_linux_bazel.yml  amd64_linux_cmake.yml  amd64_linux_zig.yml  amd64_macos.yml  amd64_macos_bazel.yml  amd64_macos_cmake.yml  amd64_macos_zig.yml  amd64_windows.yml  amd64_windows_bazel.yml  amd64_windows_cmake.yml  amd64_windows_zig.yml  arm.yml  arm64_freebsd_cmake.yml  arm64_macos_bazel.yml  arm64_macos_cmake.yml  arm64_macos_zig.yml  arm64_windows_cmake.yml  arm_linux.yml  arm_linux_cmake.yml  clang_format.yml  freebsd.yml  linux_aarch64.yml  linux_arm.yml  linux_mips.yml  linux_x86_64.yml  macos_x86_64.yml  mips.yml  mips_linux.yml  mips_linux_cmake.yml  (+10 more)
bazel/: platforms.bzl
bazel/ci/: README.md
bazel/ci/docker/: Dockerfile
ci/: Makefile  README.md
ci/docker/amd64/: Dockerfile
ci/vagrant/freebsd/: README.md  Vagrantfile
cmake/: README.md  aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake  googletest.CMakeLists.txt.in
cmake/ci/: Makefile  README.md
cmake/ci/docker/toolchain/: Dockerfile
cmake/ci/vagrant/freebsd/: Vagrantfile
include/: .cpuinfo_ppc.h.swp  cpu_features_common.h  cpu_features_macros.h  cpuinfo_aarch64.h  cpuinfo_arm.h  cpuinfo_core_aarch64.h  cpuinfo_loongarch.h  cpuinfo_mips.h  cpuinfo_ppc.h  cpuinfo_riscv.h  cpuinfo_s390x.h  cpuinfo_x86.h
include/internal/: bit_utils.h  cpuid_aarch64.h  cpuid_x86.h  cputype_aarch64.h  filesystem.h  hwcaps.h  hwcaps_linux_or_android.h  linux_features_aggregator.h  stack_line_reader.h  string_view.h  unix_features_aggregator.h  windows_utils.h
ndk_compat/: CMakeLists.txt  cpu-features.c  cpu-features.h  ndk-compat-test.c
scripts/: generate_badges.d  make_release.sh  run_integration.sh  setup_qemu.sh  setup_toolchain.sh  test_integration.sh
src/: config.h.in  copy.h  cpuid_x86_clang.c  cpuid_x86_gcc.c  cpuinfo_aarch64.c  cpuinfo_aarch64_db.inl  cpuinfo_arm.c  cpuinfo_arm_db.inl  cpuinfo_core_aarch64.c  cpuinfo_mips.c  cpuinfo_mips_db.inl  cpuinfo_ppc.c  cpuinfo_ppc_db.inl  cpuinfo_x86.c  cpuinfo_x86_db.inl  define_cpuid_aarch64.inl  define_introspection.inl  define_introspection_and_hwcaps.inl  define_introspection_base_aarch64.inl  define_tables.h  equals.h  filesystem.c  hwcaps.c  hwcaps_freebsd.c  hwcaps_freebsd_or_openbsd.c  hwcaps_linux_or_android.c  impl_aarch64.c  impl_aarch64__base_implementation.inl  impl_aarch64_cpuid.c  impl_aarch64_freebsd.c  impl_aarch64_iphone.c  impl_aarch64_linux_or_android.c  impl_aarch64_macos.c  impl_aarch64_macos_or_iphone.c  impl_aarch64_windows.c  impl_arm_linux_or_android.c  impl_loongarch_linux.c  impl_mips_linux_or_android.c  impl_ppc_freebsd.c  impl_ppc_linux.c  (+15 more)
src/asm/aarch64/: cpuid_msvc_armasm64_windows.asm
src/utils/: bump_allocator.h  list_cpu_features.c  list_cpu_features__base_implementation.inl  list_cpu_features_aarch64_implementation.c  list_cpu_features_arm_implementation.c  list_cpu_features_mips_implementation.c  list_cpu_features_ppc_implementation.c  list_cpu_features_x86_implementation.c  node.h
test/: CMakeLists.txt  bit_utils_test.cc  cpuinfo_aarch64_test.cc  cpuinfo_arm_test.cc  cpuinfo_loongarch_test.cc  cpuinfo_mips_test.cc  cpuinfo_ppc_test.cc  cpuinfo_riscv_test.cc  cpuinfo_s390x_test.cc  cpuinfo_x86_test.cc  cputype_aarch64_for_testing.h  filesystem_for_testing.cc  filesystem_for_testing.h  hwcaps_for_testing.cc  hwcaps_for_testing.h  linux_features_aggregator_test.cc  stack_line_reader_test.cc  string_view_test.cc  unix_features_aggregator_test.cc
